feat:point search

--- a/src/index.template.html
+++ b/src/index.template.html
@@ -22,6 +22,7 @@
   <script type="text/javascript"
     src="http://api.map.baidu.com/library/DrawingManager/1.4/src/DrawingManager_min.js"></script>
   <link rel="stylesheet" href="http://api.map.baidu.com/library/DrawingManager/1.4/src/DrawingManager_min.css" />
+  <script type="text/javascript" src='http://api.map.baidu.com/library/GeoUtils/1.2/src/GeoUtils_min.js'></script>
 
 </head>
 
