--- a/src/index.template.html
+++ b/src/index.template.html
@@ -18,11 +18,11 @@
   <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
   <link rel="icon" type="image/ico" href="favicon.ico">
-  <script type="text/javascript" src="http://api.map.baidu.com/api?v=3.0&ak=9N4ANLGILRQFfiUb57mrQHG7FxGRydBz"></script>
+  <script type="text/javascript" src="https://api.map.baidu.com/api?v=3.0&ak=9N4ANLGILRQFfiUb57mrQHG7FxGRydBz"></script>
   <script type="text/javascript"
-    src="http://api.map.baidu.com/library/DrawingManager/1.4/src/DrawingManager_min.js"></script>
-  <link rel="stylesheet" href="http://api.map.baidu.com/library/DrawingManager/1.4/src/DrawingManager_min.css" />
-  <script type="text/javascript" src='http://api.map.baidu.com/library/GeoUtils/1.2/src/GeoUtils_min.js'></script>
+    src="https://api.map.baidu.com/library/DrawingManager/1.4/src/DrawingManager_min.js"></script>
+  <link rel="stylesheet" href="https://api.map.baidu.com/library/DrawingManager/1.4/src/DrawingManager_min.css" />
+  <script type="text/javascript" src='https://api.map.baidu.com/library/GeoUtils/1.2/src/GeoUtils_min.js'></script>
 
 </head>
 
